--- a/style.css
+++ b/style.css
@@ -124,9 +124,9 @@ body {
 }
 
 /* Images de fond */
-.img1 { background-image: url('PORTFOLIO/images/images1.jpg'); }
-.img2 { background-image: url('PORTFOLIO/images/images2.jpg'); }
-.img3 { background-image: url('PORTFOLIO/images/images3.JPG'); }
+.img1 { background-image: url('images/images1.jpg'); }
+.img2 { background-image: url('images/images2.jpg'); }
+.img3 { background-image: url('images/images3.JPG'); }
 
 /* Cacher les inputs */
 input[type="radio"] {
