--- a/style.css
+++ b/style.css
@@ -68,10 +68,11 @@ body {
   display: flex;
   align-items: center;
 } 
+
 .intro{
   margin-top: 5%;
   display: flex;
-  justify-content: center; /* Centre horizontalement */
+  justify-content: center; 
   align-items: center;     /* Centre verticalement si tu veux */
   height: 100px;    
 } 
@@ -85,7 +86,7 @@ body {
   border-right: 7px solid black;
   width: 0;
   font-family: monospace;
-  font-size: 24px;
+  font-size: 30px;
   animation: typing 2s steps(26, end) forwards,  blink 0.7s step-end infinite; 
 }
 
@@ -103,7 +104,7 @@ body {
   max-width: 600px;
   margin: auto;
   overflow: hidden;
-  border-radius: 20%;
+  border-radius: 10%;
   margin-top: 5%;
   margin-bottom: 5%;
 }
@@ -124,9 +125,9 @@ body {
 }
 
 /* Images de fond */
-.img1 { background-image: url('images/images1.jpg'); }
-.img2 { background-image: url('images/images2.jpg'); }
-.img3 { background-image: url('images/images3.JPG'); }
+.img1 { background-image: url('portfolio/images/images1.jpg'); }
+.img2 { background-image: url('portfolio/images/images2.jpg'); }
+.img3 { background-image: url('portfolio/images/images3.JPG'); }
 
 /* Cacher les inputs */
 input[type="radio"] {
@@ -160,7 +161,7 @@ input[type="radio"] {
   display: block;
 }
 
-#slide2:checked ~ .carousel-arrows .slide3.prev,
+#slide2:checked ~ .carousel-arrows .slide1.prev,
 #slide2:checked ~ .carousel-arrows .slide3.next {
   display: block;
 }
@@ -195,10 +196,10 @@ input[type="radio"] {
   align-items: center;       
   justify-content: center;  
   text-align: center;        
-  width: 100%;               /* Si tu veux que le conteneur occupe toute la largeur */
-  max-width: 500px;          /* Optionnel : largeur maximale du conteneur */
-  margin: 0 auto;            /* Centre le conteneur s'il est plus petit que la page */
-  padding: 20px;             /* Ajoute de l'espace à l'intérieur du conteneur */
+  width: 100%;               
+  max-width: 500px;          
+  margin: 0 auto;            
+  padding: 20px;           
 }
 .categories ul {
   list-style-type: none;
@@ -210,8 +211,8 @@ input[type="radio"] {
   margin-bottom: 10%;
 }
 
-.category {
-  background-color: #000000; /* Vert pour l'exemple */
+.category1, .category2,.category3,.category4,.category5 {
+  background-color: #000000;
   color: white;
   padding: 20px;
   margin: 10px 0;
@@ -220,46 +221,73 @@ input[type="radio"] {
   border-radius: 40px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.2s;
 }
 
-.category:hover {
-  background-color: #8da78e; /* Changement de couleur au survol */
+.category1:hover {
+  background-color: #c08943; /* Changement de couleur au survol */
+}
+.category2:hover {
+  background-color: #8a95d8; /* Changement de couleur au survol */
+}
+.category3:hover {
+  background-color: #47964a; /* Changement de couleur au survol */
+}
+.category4:hover {
+  background-color: #d17676; /* Changement de couleur au survol */
+}
+.category5:hover {
+  background-color: #ae458d; /* Changement de couleur au survol */
 }
 .self-presentation h1{
   margin: 0% auto;
    width:600px;
  }
  .separation {
-  border: none; /* Supprime la bordure par défaut */
-  height: 1px; /* Hauteur de la ligne */
-  background-color: #000000; /* Couleur de la ligne */
-  width: 40%; /* La ligne occupe toute la largeur disponible */
-  margin-top: 5px; /* Marge au-dessus de la ligne */
+  border: none; 
+  height: 1px; 
+  background-color: #000000; 
+  width: 40%; 
+  margin-top: 5px; 
+  animation: expand 1s ease-out forwards;
+}
+
+@keyframes expand {
+  from {
+    width: 400px;
+  }
+  to {
+    width: 600px; /* ou 100%, selon ton besoin */
+  }
 }
 .self-presentation p{
   margin: 0% auto;
    width:600px;
    text-align: justify;
-   margin-bottom: 3%;
+   margin-bottom: 1%;
  }
  .self-presentation h4{
   margin: 0% auto;
   width:600px;
   text-align: justify;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
   font-size: large;
  }
  .self-presentation h5{
   margin: 0% auto;
   width:600px;
-  text-align: justify;
-  margin-bottom: 5%;
+  text-align: center;
+  margin-bottom: 0% auto;
+    margin-top: 4%;
   font-size: large;
  }
-
-
-
+  .signature img{
+  width: 400px;
+  height: auto;
+  display: block;
+  margin: auto ;
+  margin-top: 0%;
+   }
 
 .footer {
   display: flex;
